refacto(config): use cfg instead of schema path

--- a/fixtures/sahih.config.json
+++ b/fixtures/sahih.config.json
@@ -4,7 +4,7 @@
             "target": "./assets/generated/model"
         },
         "input": {
-            "target": "./assets/api-schema.json"
+            "target": "./fixtures/api-schema.json"
         }
     }
 }
