--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [package]
+authors = ["Ginkoe <ginkoe@protonmail.com>"]
 categories = ["command-line-interface", "command-line-utilities"]
 description = "Toolings for making Fullstack easier"
 keywords = ["cli", "terminal", "productivity", "git", "openapi", "swagger", "validation"]
@@ -15,15 +16,18 @@ exclude = [
   "scripts/*",
 ]
 
+license = "MIT"
+readme = "README.md"
+
 edition = "2021"
 
 [dependencies]
 clap = {version = "3.0.0-rc.7"}
-log = "0.4.14"
-pretty_env_logger = "0.4"
-termcolor = "1.1.2"
-openapiv3 = "0.5.0"
-serde_json = "1.0"
 indexmap = "1.7.0"
+log = "0.4.14"
+openapiv3 = "0.5.0"
+pretty_env_logger = "0.4"
 serde = "1.0.132"
 serde_derive = "1.0.132"
+serde_json = "1.0"
+termcolor = "1.1.2"
